# foo

./: .gitignore  README.md
asm/gas/: test.gas
asm/hello/: hello.asm
asm/hola/: make.sh
bigthink/: timelines.py
c/: .gdb_history  asttest.c  atomics.c  b.c  bruteforce.c  calc.c  charToLong.c  collatz.c  comp-in.c  dec2hex.c  depthfirstsearch.c  ex4.c  fastlog10.c  fibbonacci.c  fibonaccispiral.c  first.c  fizzbuzz.c  gethostname.c  gsea.c  h.c  hello.c  hello_ps  hex2dec.c  linemacro.c  ls.c  memcpy.c  negate.c  oldcalc.c  openmp_test.c  pairs.c  pathfind.c  permissive.cpp  pocketsphinx.c  printing.c  reverse_ll.c  segfault_example.c  sethostname.c  stack.c  tcc.c  trie.c  (+2 more)
c++/: read.cpp  revstr.cpp  template.cpp  weightedgpa.cpp
c/euler/: 108.c  206.c  collatz.c
c/raytrace/: main.c
c/raytrace2/: main.c  quat.h
c/x11/: README.md  fibonaccispiral.c  x11.c  xor.c
clojure/: namespace.clj
docs/: package-lock.json  package.json
docs/src/: main.tsx
ea/: 2023-03-14-OpenphilApp.md  FAOSTAT_data_en_3-27-2023.csv  Updated Mammal Biomass Figures.md  livestock.ipynb  mnist-mad.md  vtrace.md
go/: hello.go
html/: README.md  header.h  index.c
html/gridworld/: gridworld.css  gridworld.html
java/: DeflaterTest.java  Hello.java  MostWater.java  Punt.java  Xmen.java  ZigZagConversion.java  arraymerge.java  chpa.java  interfaceoverridetest.java  lambda.java  loadbufferedimage.java  threaddemo.java  threadpool.java
lean/: errorexample.lean  hello_world.lean  test.lean
lean/cat/: cat.lean  (+1 more)
nim/: helloworld
openscad/: boxbody.scad  nozzle-body.scad  nozzle-inlet.scad  nozzle.scad  thing.scad  ysplit.scad
python/: collatz.py  collatz2.py  cv2  edge.py  game.py  harris.py  hopskipjump.py  img.py  longestpalindromicsequence.py  longestsubstring.py  mjpgshow.py  mnist.ipynb  montecarlo.py  networking.py  pass.py  pirc522-client.py  popsim.py  smoothing_angle.ipynb  starfield_test.py  submission.py  test.py  unkillable.py  z3test.py
python/browse_command/: .gitignore  pyproject.toml
python/browse_command/browse/: browser.py  browser_engine.py  cli.py  observation_processor.py  utils.py
python/browse_command/browse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/browse_command/browse_cli.egg-info/: PKG-INFO  SOURCES.txt
python/mcp_stdio_min_example/mcp_server/: pyproject.toml
python/mcp_stdio_min_example/mcp_server/minexample/: __main__.py
rust/: .gdb_history  borrowerror.rs  greek.rs  guessinggame  guessinggame.rs  print_bin  print_bin.rs
zig/: hello  reverse_ll.zig
(+1485 files in other folders)
