[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browse"
version = "0.1.0"
description = "A simple CLI tool to browse the web"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Govind Pimpale", email = "gpimpale29@gmail.com"}
]
dependencies = ["click", "playwright"]

[project.urls]
"Homepage" = "https://github.com/pimpale/foo"

[project.scripts]
browse-goto = "browse.cli:browse_goto"
browse-click = "browse.cli:browse_click"
browse-type = "browse.cli:browse_type"
browse-scroll = "browse.cli:browse_scroll"
browse-back = "browse.cli:browse_back"