[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browse-cli"
version = "0.1.0"
description = "A simple CLI tool to browse the web"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Govind Pimpale", email = "gpimpale29@gmail.com"}
]
dependencies = ["click", "playwright"]

[project.urls]
"Homepage" = "https://github.com/pimpale/foo"

[project.scripts]
browse-start = "browse.cli:browse_start"
browse-goto = "browse.cli:browse_goto"
browse-click = "browse.cli:browse_click"
browse-type = "browse.cli:browse_type"
browse-scroll = "browse.cli:browse_scroll"
browse-navigate = "browse.cli:browse_navigate"
browse-reload = "browse.cli:browse_reload"
browse-observe = "browse.cli:browse_observe"